--- a/packages/lakka/retroarch_base/retroarch/tmpfiles.d/retroarch-userdirs.conf
+++ b/packages/lakka/retroarch_base/retroarch/tmpfiles.d/retroarch-userdirs.conf
@@ -9,12 +9,14 @@ d    /storage/logfiles              0777 root root - -
 d    /storage/playlists             0777 root root - -
 d    /storage/recordings            0777 root root - -
 d    /storage/remappings            0777 root root - -
+d    /storage/roms                  0777 root root - -
 d    /storage/roms/downloads        0777 root root - -
 d    /storage/savefiles             0777 root root - -
 d    /storage/savestates            0777 root root - -
 d    /storage/screenshots           0777 root root - -
 d    /storage/thumbnails            0777 root root - -
 
+d    /storage/.tmp                  0777 root root - -
 d    /storage/.tmp/assets-workdir   0777 root root - -
 d    /storage/.tmp/cores-workdir    0777 root root - -
 d    /storage/.tmp/database-workdir 0777 root root - -
