--- a/projects/L4T/devices/Switch/linux/linux.aarch64.conf
+++ b/projects/L4T/devices/Switch/linux/linux.aarch64.conf
@@ -1746,9 +1746,7 @@ CONFIG_JOYCON_SERDEV_FF=y
 # CONFIG_JOYSTICK_ZHENHUA is not set
 # CONFIG_JOYSTICK_AS5011 is not set
 # CONFIG_JOYSTICK_JOYDUMP is not set
-CONFIG_JOYSTICK_XPAD=m
-CONFIG_JOYSTICK_XPAD_FF=y
-CONFIG_JOYSTICK_XPAD_LEDS=y
+# CONFIG_JOYSTICK_XPAD is not set
 CONFIG_INPUT_TABLET=y
 # CONFIG_TABLET_USB_ACECAD is not set
 # CONFIG_TABLET_USB_AIPTEK is not set
@@ -3347,6 +3345,7 @@ CONFIG_THRUSTMASTER_FF=y
 CONFIG_HID_WACOM=y
 CONFIG_HID_WIIMOTE=y
 CONFIG_HID_XINMO=y
+CONFIG_HID_XPADNEO=y
 CONFIG_HID_ZEROPLUS=y
 # CONFIG_ZEROPLUS_FF is not set
 CONFIG_HID_ZYDACRON=y
